--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
                 <input id="userName" type="text" placeholder="User Name" required>
                 <input id="email" type="email" placeholder="Email" required>
                 <input id="password" type="password" placeholder="Password" required>
-                <button type="button" onclick="userDetail()">Sign Up</button>
+                <button type="button" onclick="userDetail()">SignUp</button>
             </form>
         </div>
 
         <!-- Login Form -->
         <div class="login">
             <form id="loginForm">
-                <label for="checkbox" aria-hidden="true">Login</label>
-                <input id="loginEmail" type="email" placeholder="Email" required>
-                <input id="loginPassword" type="password" placeholder="Password" required>
-                <button type="button" onclick="loginUser()">Login</button>
+                <label for="checkbox" aria-hidden="true">Login<label>
+                        <input id="loginEmail" type="email" placeholder="Email" required>
+                        <input id="loginPassword" type="password" placeholder="Password" required>
+                        <button type="button" onclick="loginUser()          ">Login<button>
             </form>
+        </div>
+        <div id="loginDiv">
+            <p>Don't have an account? <span onclick="showSignup()" >Sign up</span>
+            </p>
+        </div>
+
+        <div id="signupDiv" style="display:none;">
+            <p>Already have an account? <span onclick="showLogin()" >Login</span></p>
         </div>
     </div>
 
